tests/negative/test_decl_bad_type.orb
fnc main() {
    i32 cn x = 500;
    u16 y = x;
}